[gd_scene load_steps=2 format=2]

[ext_resource path="res://Chat_History.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Hint", "Rect" ]

[node name="Sprite" type="Sprite" parent="HBoxContainer" index="0"]

_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 148.0
margin_top = 143.0
margin_right = 148.0
margin_bottom = 157.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 0.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="HBoxContainer/Label" index="0"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Label2" type="Label" parent="HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 152.0
margin_top = 143.0
margin_right = 152.0
margin_bottom = 157.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer2" type="Timer" parent="HBoxContainer/Label2" index="0"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[connection signal="timeout" from="HBoxContainer/Label/Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="HBoxContainer/Label2/Timer2" to="." method="_on_Timer2_timeout"]


